Enhance project configuration and animations
- Added a new script command "dev:clean" in package.json for cleaning Tailwind CSS.
- Updated tailwind.config.js to streamline content paths and added new animation keyframes for fade-in effects.
- Modified tsconfig.json to include baseUrl and paths for easier module resolution.
- Refactored animations in src/animations.ts for improved structure and added fade-in effects for elements.
- Updated App.vue and TopNavigation.vue to utilize new navigation animations and removed unnecessary imports.
- Enhanced HomeHero.vue with improved text reveal animations and styling adjustments.

This commit focuses on improving the development workflow and enhancing the animation experience across the application.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:clean": "npx tailwindcss --clean && vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
